--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -2,7 +2,9 @@
   display: flex;
   justify-content: center;
   border-top: 2px solid var(--color-white);
-  padding: 1rem;
+  padding: 1rem 0 1rem 0;
+  width: 100%;
+  margin: 0;
 }
 .footer-option {
   font-size: 1rem;
@@ -15,6 +17,7 @@
   background-color: var(--color-black);
   color: var(--color-white);
   width: 100vw;
+  margin: 0 auto 0 auto;
 }
 .footer-text {
   font-family: Quicksand;
