--- a/src/components/NavbarSite.css
+++ b/src/components/NavbarSite.css
@@ -1,5 +1,6 @@
 .navbar-project {
   background-color: var(--color-black);
+  max-width: 100vw;
 }
 
 .offcanvas-project {
